<resources>
    <string name="app_name">TextInputLayout</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="create_new">Click here for register</string>
    <string name="not_register">Not Register?</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="re_enter_passsword">Re-enter password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="submit">Sign Out</string>
    <string name="not_login">Create A New Account Login?</string>
</resources>